Hello uses styles.css

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,6 +1,7 @@
 <!-- Author: Vladimir Pekarsky (some@email.com) -->
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
     <h1>Hellow, world</h1>
